objects/Truck__c.object
<CustomObject>
    <label>Truck</label>
    <nameField>
        <label>Truck Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trucks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Drivers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drivers</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trucks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Time_Booked__c</fullName>
        <label>Number of Time Booked</label>
        <summaryForeignKey>Truck_booking__c.Truck__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>truck_take_Approximate_load__c</fullName>
        <label>truck take Approximate load</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>